@@ -1973,7 +1973,9 @@ qc pass: qos priority otherflowspec
 qc pass: qos ingress pps copp
 qc pass: qos egress pps copp
 qc pass: qos pps dapp
-qc pass: qos dapp divert action
+qc pass: qos divert dapp
+qc pass: qos divert flowspec
+qc pass: qos divert otherflowspec
 qc pass: qos ingress length matcher
 qc pass: qos egress length matcher
 qc pass: qos ingress tos matcher
