@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.12.3-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-12-03 13:09:17, took 00:13:27, with 80 workers, on 3396 cases, 0 failed, 0 traces, 17 retries<br/>
+tested: 2023-12-03 14:17:02, took 00:11:42, with 80 workers, on 3398 cases, 0 failed, 0 traces, 7 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1994,7 +1994,9 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-copp19.tst">qos-copp19.tst</a></td><td>success</td><td>qos ingress pps copp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-copp20.tst">qos-copp20.tst</a></td><td>success</td><td>qos egress pps copp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-copp21.tst">qos-copp21.tst</a></td><td>success</td><td>qos pps dapp</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/qos-copp22.tst">qos-copp22.tst</a></td><td>success</td><td>qos dapp divert action</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/qos-copp22.tst">qos-copp22.tst</a></td><td>success</td><td>qos divert dapp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/qos-copp23.tst">qos-copp23.tst</a></td><td>success</td><td>qos divert flowspec</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/qos-copp24.tst">qos-copp24.tst</a></td><td>success</td><td>qos divert otherflowspec</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-match01.tst">qos-match01.tst</a></td><td>success</td><td>qos ingress length matcher</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-match02.tst">qos-match02.tst</a></td><td>success</td><td>qos egress length matcher</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-match03.tst">qos-match03.tst</a></td><td>success</td><td>qos ingress tos matcher</td></tr>
