@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter-rare v23.11.29-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-11-29 09:42:04, took 00:44:56, with 10 workers, on 526 cases, 0 failed, 0 traces, 1 retries
+-;-;-;freeRouter-rare v23.12.3-cur, done by sprscc13@mr.n0b0dy.
+-;-;-;2023-12-03 15:18:13, took 00:48:23, with 10 workers, on 526 cases, 0 failed, 0 traces, 0 retries
 -;-;-;java -Xmx256m -jar rtr.jar
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
