@@ -14,8 +14,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter-rare v23.11.29-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-11-29 09:42:04, took 00:44:56, with 10 workers, on 526 cases, 0 failed, 0 traces, 1 retries<br/>
+release: freeRouter-rare v23.12.3-cur, done by sprscc13@mr.n0b0dy.<br/>
+tested: 2023-12-03 15:18:13, took 00:48:23, with 10 workers, on 526 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: java -Xmx256m -jar rtr.jar<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
