@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.12.3-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-12-03 13:19:25, took 00:09:51, with 60 workers, on 526 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2023-12-03 14:27:12, took 00:09:53, with 60 workers, on 526 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
