@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.12.3-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-12-03 13:19:25, took 00:09:51, with 60 workers, on 526 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2023-12-03 14:27:12, took 00:09:53, with 60 workers, on 526 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
